Wed Jul 15 15:11:57 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* experimental release 1.1b9_31.

Wed Jul 15 15:05:27 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (thread_create): exit() and abort() in threads now
 	  forwarded to main_thread.

Tue Jul 14 14:03:47 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* variable.c (obj_instance_variables): list names that is not
	  instance variables.

	* gc.c (GC_MALLOC_LIMIT): choose smaller limit value.

Mon Jul 13 12:39:38 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* object.c (str2cstr): should not return NULL.

Fri Jul 10 11:51:46 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* parse.y (gettable): needed to add dyna_in_block() check.

Thu Jul  9 17:38:23 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* experimental release 1.1b9_30.

Thu Jul  9 16:01:48 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* sprintf.c (fmt_setup): format specifier for long needed.

	* sprintf.c (f_sprintf): ditto.

	* numeric.c (fix2str): ditto.

	* eval.c (thread_create): no more ITIMER_REAL.

	* eval.c (thread_create): thread finalization needed before
	  aborting thread if thread_abort is set.

Wed Jul  8 18:17:33 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* bignum.c (big_pow): abandon power by bignum (too big).

Tue Jul  7 13:58:43 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (rb_catch): add C level catch/throw feature.

Mon Jul  6 15:18:09 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* parse.y (arg): proper return values for `||=' and `&&='.

Fri Jul  3 16:05:11 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* experimental release 1.1b9_29.

Fri Jul  3 11:20:46 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* marshal.c (r_byte): byte should not extend sign bit.

	* numeric.c (fix_mul): use FIX2LONG() instead of FIX2INT() for
	  64bit architectures.

	* marshal.c (r_bytes): remove weird casting bwetween pointer and int.

	* process.c (proc_setsid): new method Process#setsid().
